2016-08-20 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c, arp-scan.h: Use posix hash table functions hcreate(),
	  hsearch() and hdestroy() instead of the gas hash table code.

	* hash.c, hash.h, obstack.c, obstack.h: Removed.

2016-08-13 Roy Hills <Roy.Hills@nta-monitor.com>

	* get-oui, get-oui.1, arp-scan.1: Update IEEE OUI download location.

	* ieee-oui.txt: Updated from IEEE website using modified script.

	* check-decode: Updated manufacturer names to match updated OUI file.

	* configure.ac: Increased version number from 1.9.2 to 1.9.3 to
	  reflect the various changes made on github between Aug 2013 and
	  Aug 2016.

	* acinclude.m4: Assume long long int format is %lld if cross compiling.

	* arp-scan.c: Correct warning message for invalid IP addresses to avoid
	  segmentation violation.

2015-11-13 Roy Hills <Roy.Hills@nta-monitor.com>

	* get-iab: Read the OUI from the data in the file instead of using
	  the constant 24-bit number 0050C2.  This is required because the
	  0050C2 IEEE OUI has been fully used, and allocations have started
	  from the 40D855 IEEE OUI.

	* *.c: Removed unneeded trailing whitespace in source code.  Thanks
	  to "jubalh" for this pull request.

	* arp-scan.c, check-run1: Change --help and --version options to output
	  to stdout (fd 0) instead of stderr (fd 1) in accordance with GNU
	  Coding Standards section 4.7, "Standards for Command Line Interfaces".
	  Thanks to "srdja" for this pull request.

	* get-oui, get-iab: omit trailing whitespace from ieee-oui.txt and
	  ieee-iab.txt files.

	* ieee-oui.txt, ieee-iab.txt: Updated from IEEE website using modified
	  scripts.

2013-12-02 Roy Hills <Roy.Hills@nta-monitor.com>

	* link-packet-socket.c: Die with an error if we can't open a raw
	  packet socket to obtain the interface MAC address.  This avoids
	  a segmentation violation on Linux if we try to run arp-scan against
	  a specific interface without the required privileges.
